Refactor code to run under Java 8